Fix mobile width in masthead inner wrap; update width from 95% to 95.5% for consistency

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -31,7 +31,7 @@
         @include clearfix;
         padding: 0.5em 0em 0.5em 0.5em;
         font-family: $sans-serif-narrow;
-        width: 95%; /* Mobile width (95%) */
+        width: 95.5%; /* Mobile width (95%) */
 
         margin: 0 auto;
         /* Center the inner content */
